Mengupdate DOM Selection

--- a/DOM/02_DOM_Selection/index.html
+++ b/DOM/02_DOM_Selection/index.html
@@ -36,7 +36,7 @@
             <p class="p2">paragraf 2</p>
             <p class="p3">paragraf 3</p>
         </section>
-        <section class="b">
+        <section id="b">
             <p>paragraf 4</p>
             <ul>
                 <li>item 1</li>
